Updated Base64 encoding from org.java's to org.apache's.